grammar/DaedalusParser.py
# Generated from Daedalus.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DaedalusParser ( Parser ):

    grammarFileName = "Daedalus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "','", "'{'", "'}'", "'('", "')'", 
                     "'['", "']'", "'='", "'.'", "'+='", "'-='", "'*='", 
                     "'/='", "'+'", "'-'", "'<<'", "'>>'", "'<'", "'>'", 
                     "'<='", "'>='", "'=='", "'!='", "'!'", "'~'", "'*'", 
                     "'/'", "'%'", "'&'", "'|'", "'&&'", "'||'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'while'", "'break'", "'continue'", 
                     "'extern'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Const", "Var", "If", "Int", 
                      "Else", "Func", "String", "Class", "Void", "Return", 
                      "Float", "Prototype", "Instance", "Null", "NoFunc", 
                      "While", "Break", "Continue", "Extern", "Identifier", 
                      "IntegerLiteral", "FloatLiteral", "StringLiteral", 
                      "Whitespace", "Newline", "BlockComment", "LineComment" ]

    RULE_daedalusFile = 0
    RULE_blockDef = 1
    RULE_inlineDef = 2
    RULE_externFunctionDecl = 3
    RULE_functionDef = 4
    RULE_constDef = 5
    RULE_classDef = 6
    RULE_prototypeDef = 7
    RULE_instanceDef = 8
    RULE_instanceDecl = 9
    RULE_varDecl = 10
    RULE_constArrayDef = 11
    RULE_constArrayAssignment = 12
    RULE_constValueDef = 13
    RULE_constValueAssignment = 14
    RULE_varArrayDecl = 15
    RULE_varArrayAssignment = 16
    RULE_varValueDecl = 17
    RULE_varValueAssignment = 18
    RULE_parameterList = 19
    RULE_parameterDecl = 20
    RULE_statementBlock = 21
    RULE_statement = 22
    RULE_functionCall = 23
    RULE_assignment = 24
    RULE_elseBlock = 25
    RULE_elseIfBlock = 26
    RULE_ifBlock = 27
    RULE_ifBlockStatement = 28
    RULE_returnStatement = 29
    RULE_whileStatement = 30
    RULE_breakStatement = 31
    RULE_continueStatement = 32
    RULE_expression = 33
    RULE_arrayIndex = 34
    RULE_arraySize = 35
    RULE_value = 36
    RULE_referenceAtom = 37
    RULE_reference = 38
    RULE_dataType = 39
    RULE_nameNode = 40
    RULE_parentReference = 41
    RULE_assignmentOperator = 42
    RULE_addOperator = 43
    RULE_bitMoveOperator = 44
    RULE_compOperator = 45
    RULE_eqOperator = 46
    RULE_unaryOperator = 47
    RULE_multOperator = 48
    RULE_binAndOperator = 49
    RULE_binOrOperator = 50
    RULE_logAndOperator = 51
    RULE_logOrOperator = 52

    ruleNames =  [ "daedalusFile", "blockDef", "inlineDef", "externFunctionDecl", 
                   "functionDef", "constDef", "classDef", "prototypeDef", 
                   "instanceDef", "instanceDecl", "varDecl", "constArrayDef", 
                   "constArrayAssignment", "constValueDef", "constValueAssignment", 
                   "varArrayDecl", "varArrayAssignment", "varValueDecl", 
                   "varValueAssignment", "parameterList", "parameterDecl", 
                   "statementBlock", "statement", "functionCall", "assignment", 
                   "elseBlock", "elseIfBlock", "ifBlock", "ifBlockStatement", 
                   "returnStatement", "whileStatement", "breakStatement", 
                   "continueStatement", "expression", "arrayIndex", "arraySize", 
                   "value", "referenceAtom", "reference", "dataType", "nameNode", 
                   "parentReference", "assignmentOperator", "addOperator", 
                   "bitMoveOperator", "compOperator", "eqOperator", "unaryOperator", 
                   "multOperator", "binAndOperator", "binOrOperator", "logAndOperator", 
                   "logOrOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    Const=34
    Var=35
    If=36
    Int=37
    Else=38
    Func=39
    String=40
    Class=41
    Void=42
    Return=43
    Float=44
    Prototype=45
    Instance=46
    Null=47
    NoFunc=48
    While=49
    Break=50
    Continue=51
    Extern=52
    Identifier=53
    IntegerLiteral=54
    FloatLiteral=55
    StringLiteral=56
    Whitespace=57
    Newline=58
    BlockComment=59
    LineComment=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DaedalusFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DaedalusParser.EOF, 0)

        def blockDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DaedalusParser.BlockDefContext)
            else:
                return self.getTypedRuleContext(DaedalusParser.BlockDefContext,i)


        def inlineDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DaedalusParser.InlineDefContext)
            else:
                return self.getTypedRuleContext(DaedalusParser.InlineDefContext,i)


        def getRuleIndex(self):
            return DaedalusParser.RULE_daedalusFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDaedalusFile" ):
                listener.enterDaedalusFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDaedalusFile" ):
                listener.exitDaedalusFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDaedalusFile" ):
                return visitor.visitDaedalusFile(self)
            else:
                return visitor.visitChildren(self)




    def daedalusFile(self):

        localctx = DaedalusParser.DaedalusFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_daedalusFile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 108
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 106
                        self.blockDef()
                        pass

                    elif la_ == 2:
                        self.state = 107
                        self.inlineDef()
                        pass

             
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 113
            self.match(DaedalusParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDef(self):
            return self.getTypedRuleContext(DaedalusParser.FunctionDefContext,0)


        def classDef(self):
            return self.getTypedRuleContext(DaedalusParser.ClassDefContext,0)


        def prototypeDef(self):
            return self.getTypedRuleContext(DaedalusParser.PrototypeDefContext,0)


        def instanceDef(self):
            return self.getTypedRuleContext(DaedalusParser.InstanceDefContext,0)


        def getRuleIndex(self):
            return DaedalusParser.RULE_blockDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockDef" ):
                listener.enterBlockDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockDef" ):
                listener.exitBlockDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockDef" ):
                return visitor.visitBlockDef(self)
            else:
                return visitor.visitChildren(self)




    def blockDef(self):

        localctx = DaedalusParser.BlockDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_blockDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DaedalusParser.Func]:
                self.state = 115
                self.functionDef()
                pass
            elif token in [DaedalusParser.Class]:
                self.state = 116
                self.classDef()
                pass
            elif token in [DaedalusParser.Prototype]:
                self.state = 117
                self.prototypeDef()
                pass
            elif token in [DaedalusParser.Instance]:
                self.state = 118
                self.instanceDef()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DaedalusParser.T__0:
                self.state = 121
                self.match(DaedalusParser.T__0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InlineDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def externFunctionDecl(self):
            return self.getTypedRuleContext(DaedalusParser.ExternFunctionDeclContext,0)


        def constDef(self):
            return self.getTypedRuleContext(DaedalusParser.ConstDefContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(DaedalusParser.VarDeclContext,0)


        def instanceDecl(self):
            return self.getTypedRuleContext(DaedalusParser.InstanceDeclContext,0)


        def getRuleIndex(self):
            return DaedalusParser.RULE_inlineDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInlineDef" ):
                listener.enterInlineDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInlineDef" ):
                listener.exitInlineDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInlineDef" ):
                return visitor.visitInlineDef(self)
            else:
                return visitor.visitChildren(self)




    def inlineDef(self):

        localctx = DaedalusParser.InlineDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_inlineDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DaedalusParser.Extern]:
                self.state = 124
                self.externFunctionDecl()
                pass
            elif token in [DaedalusParser.Const]:
                self.state = 125
                self.constDef()
                pass
            elif token in [DaedalusParser.Var]:
                self.state = 126
                self.varDecl()
                pass
            elif token in [DaedalusParser.Instance]:
                self.state = 127
                self.instanceDecl()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 130
            self.match(DaedalusParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternFunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Extern(self):
            return self.getToken(DaedalusParser.Extern, 0)

        def Func(self):
            return self.getToken(DaedalusParser.Func, 0)

        def dataType(self):
            return self.getTypedRuleContext(DaedalusParser.DataTypeContext,0)


        def nameNode(self):
            return self.getTypedRuleContext(DaedalusParser.NameNodeContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(DaedalusParser.ParameterListContext,0)


        def getRuleIndex(self):
            return DaedalusParser.RULE_externFunctionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExternFunctionDecl" ):
                listener.enterExternFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExternFunctionDecl" ):
                listener.exitExternFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExternFunctionDecl" ):
                return visitor.visitExternFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def externFunctionDecl(self):

        localctx = DaedalusParser.ExternFunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_externFunctionDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(DaedalusParser.Extern)
            self.state = 133
            self.match(DaedalusParser.Func)
            self.state = 134
            self.dataType()
            self.state = 135
            self.nameNode()
            self.state = 136
            self.parameterList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Func(self):
            return self.getToken(DaedalusParser.Func, 0)

        def dataType(self):
            return self.getTypedRuleContext(DaedalusParser.DataTypeContext,0)


        def nameNode(self):
            return self.getTypedRuleContext(DaedalusParser.NameNodeContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(DaedalusParser.ParameterListContext,0)


        def statementBlock(self):
            return self.getTypedRuleContext(DaedalusParser.StatementBlockContext,0)


        def getRuleIndex(self):
            return DaedalusParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDef" ):
                return visitor.visitFunctionDef(self)
            else:
                return visitor.visitChildren(self)




    def functionDef(self):

        localctx = DaedalusParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(DaedalusParser.Func)
            self.state = 139
            self.dataType()
            self.state = 140
            self.nameNode()
            self.state = 141
            self.parameterList()
            self.state = 142
            self.statementBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Const(self):
            return self.getToken(DaedalusParser.Const, 0)

        def dataType(self):
            return self.getTypedRuleContext(DaedalusParser.DataTypeContext,0)


        def constValueDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DaedalusParser.ConstValueDefContext)
            else:
                return self.getTypedRuleContext(DaedalusParser.ConstValueDefContext,i)


        def constArrayDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DaedalusParser.ConstArrayDefContext)
            else:
                return self.getTypedRuleContext(DaedalusParser.ConstArrayDefContext,i)


        def getRuleIndex(self):
            return DaedalusParser.RULE_constDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDef" ):
                listener.enterConstDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDef" ):
                listener.exitConstDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDef" ):
                return visitor.visitConstDef(self)
            else:
                return visitor.visitChildren(self)




    def constDef(self):

        localctx = DaedalusParser.ConstDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(DaedalusParser.Const)
            self.state = 145
            self.dataType()
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 146
                self.constValueDef()
                pass

            elif la_ == 2:
                self.state = 147
                self.constArrayDef()
                pass


            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DaedalusParser.T__1:
                self.state = 150
                self.match(DaedalusParser.T__1)
                self.state = 153
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 151
                    self.constValueDef()
                    pass

                elif la_ == 2:
                    self.state = 152
                    self.constArrayDef()
                    pass


                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Class(self):
            return self.getToken(DaedalusParser.Class, 0)

        def nameNode(self):
            return self.getTypedRuleContext(DaedalusParser.NameNodeContext,0)


        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DaedalusParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(DaedalusParser.VarDeclContext,i)


        def getRuleIndex(self):
            return DaedalusParser.RULE_classDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDef" ):
                listener.enterClassDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDef" ):
                listener.exitClassDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDef" ):
                return visitor.visitClassDef(self)
            else:
                return visitor.visitChildren(self)




    def classDef(self):

        localctx = DaedalusParser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(DaedalusParser.Class)
            self.state = 161
            self.nameNode()
            self.state = 162
            self.match(DaedalusParser.T__2)
            self.state = 168
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 163
                    self.varDecl()
                    self.state = 164
                    self.match(DaedalusParser.T__0) 
                self.state = 170
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 171
            self.match(DaedalusParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototypeDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Prototype(self):
            return self.getToken(DaedalusParser.Prototype, 0)

        def nameNode(self):
            return self.getTypedRuleContext(DaedalusParser.NameNodeContext,0)


        def parentReference(self):
            return self.getTypedRuleContext(DaedalusParser.ParentReferenceContext,0)


        def statementBlock(self):
            return self.getTypedRuleContext(DaedalusParser.StatementBlockContext,0)


        def getRuleIndex(self):
            return DaedalusParser.RULE_prototypeDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototypeDef" ):
                listener.enterPrototypeDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototypeDef" ):
                listener.exitPrototypeDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototypeDef" ):
                return visitor.visitPrototypeDef(self)
            else:
                return visitor.visitChildren(self)




    def prototypeDef(self):

        localctx = DaedalusParser.PrototypeDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_prototypeDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(DaedalusParser.Prototype)
            self.state = 174
            self.nameNode()
            self.state = 175
            self.match(DaedalusParser.T__4)
            self.state = 176
            self.parentReference()
            self.state = 177
            self.match(DaedalusParser.T__5)
            self.state = 178
            self.statementBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstanceDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Instance(self):
            return self.getToken(DaedalusParser.Instance, 0)

        def nameNode(self):
            return self.getTypedRuleContext(DaedalusParser.NameNodeContext,0)


        def parentReference(self):
            return self.getTypedRuleContext(DaedalusParser.ParentReferenceContext,0)


        def statementBlock(self):
            return self.getTypedRuleContext(DaedalusParser.StatementBlockContext,0)


        def getRuleIndex(self):
            return DaedalusParser.RULE_instanceDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstanceDef" ):
                listener.enterInstanceDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstanceDef" ):
                listener.exitInstanceDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstanceDef" ):
                return visitor.visitInstanceDef(self)
            else:
                return visitor.visitChildren(self)




    def instanceDef(self):

        localctx = DaedalusParser.InstanceDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_instanceDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(DaedalusParser.Instance)
            self.state = 181
            self.nameNode()
            self.state = 182
            self.match(DaedalusParser.T__4)
            self.state = 183
            self.parentReference()
            self.state = 184
            self.match(DaedalusParser.T__5)
            self.state = 185
            self.statementBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstanceDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Instance(self):
            return self.getToken(DaedalusParser.Instance, 0)

        def nameNode(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DaedalusParser.NameNodeContext)
            else:
                return self.getTypedRuleContext(DaedalusParser.NameNodeContext,i)


        def parentReference(self):
            return self.getTypedRuleContext(DaedalusParser.ParentReferenceContext,0)


        def getRuleIndex(self):
            return DaedalusParser.RULE_instanceDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstanceDecl" ):
                listener.enterInstanceDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstanceDecl" ):
                listener.exitInstanceDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstanceDecl" ):
                return visitor.visitInstanceDecl(self)
            else:
                return visitor.visitChildren(self)




    def instanceDecl(self):

        localctx = DaedalusParser.InstanceDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_instanceDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(DaedalusParser.Instance)
            self.state = 188
            self.nameNode()
            self.state = 193
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 189
                    self.match(DaedalusParser.T__1)
                    self.state = 190
                    self.nameNode() 
                self.state = 195
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 196
            self.match(DaedalusParser.T__4)
            self.state = 197
            self.parentReference()
            self.state = 198
            self.match(DaedalusParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Var(self):
            return self.getToken(DaedalusParser.Var, 0)

        def dataType(self):
            return self.getTypedRuleContext(DaedalusParser.DataTypeContext,0)


        def varValueDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DaedalusParser.VarValueDeclContext)
            else:
                return self.getTypedRuleContext(DaedalusParser.VarValueDeclContext,i)


        def varArrayDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DaedalusParser.VarArrayDeclContext)
            else:
                return self.getTypedRuleContext(DaedalusParser.VarArrayDeclContext,i)

